SERVER-14366 disallow $natural sort or hint with geoNear